--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ header {
   color: #fff;
   padding: 10px;
 }
-main {
+section {
   margin-left: 20px;
   margin-right: 20px;
   display: flex;
@@ -34,10 +34,10 @@ main {
 }
 .hero--image {
   width: 125px;
-  height: 170px;
+  height: 180px;
   object-fit: cover;
   border-radius: 10px;
-  margin-top: 25px;
+  margin-top: 15px;
   margin-right: 20px;
 }
 .hero--locationDiv {
@@ -62,6 +62,7 @@ main {
   line-height: 12px;
   letter-spacing: 0.17em;
   color: #2b283a;
+  
 }
 .hero--locationDiv a {
   font-family: "Inter";
@@ -78,6 +79,8 @@ main {
   font-size: 25px;
   line-height: 30px;
   color: #2b283a;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 .hero--dates {
   font-family: "Inter";
@@ -86,6 +89,7 @@ main {
   font-size: 10.24px;
   line-height: 12px;
   color: #2b283a;
+  margin-top: 5px;
 }
 .hero--paragraph {
   font-family: "Inter";
@@ -94,11 +98,12 @@ main {
   font-size: 10.24px;
   line-height: 150%;
   color: #2b283a;
+  margin-top: 0;
 }
 
 .hr--hero{
   flex-direction: row;
   width: 75%;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 25px;
+  margin-bottom: 5px;
 }
